Rename main method to EntryPoint

--- a/Dev-0/Dev-0/Dev-0.csproj
+++ b/Dev-0/Dev-0/Dev-0.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntryPoiny.cs" />
+    <Compile Include="EntryPoint.cs" />
     <Compile Include="NumberOfRepeatedLetters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
