Rename the file

--- a/Dev-0/Dev-0/Dev-0.csproj
+++ b/Dev-0/Dev-0/Dev-0.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
-    <Compile Include="NumberOfRepeatedLetters.cs" />
+    <Compile Include="CalculatorMaximumNumberRepeatingLetters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
