--- a/CW-2/CW-2/CW-2.csproj
+++ b/CW-2/CW-2/CW-2.csproj
@@ -44,16 +44,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
-    <Compile Include="Department.cs" />
+    <Compile Include="Persons\Accountant.cs" />
+    <Compile Include="Persons\Dean.cs" />
+    <Compile Include="Departments\Department.cs" />
+    <Compile Include="Persons\Employee.cs" />
     <Compile Include="EntryPoint.cs" />
-    <Compile Include="Institute.cs" />
-    <Compile Include="Management.cs" />
+    <Compile Include="Persons\Head.cs" />
+    <Compile Include="Departments\Institute.cs" />
+    <Compile Include="Departments\Management.cs" />
+    <Compile Include="Persons\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Faculty.cs" />
+    <Compile Include="Departments\Faculty.cs" />
+    <Compile Include="Persons\Student.cs" />
     <Compile Include="University.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
