Added new logic for XmlDBProvider

--- a/CW-2/CW-2/CW-2.csproj
+++ b/CW-2/CW-2/CW-2.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="Providers\JsonProvider.cs" />
     <Compile Include="UniversityCreator.cs" />
-    <Compile Include="IDBProvider.cs" />
+    <Compile Include="Providers\IDBProvider.cs" />
     <Compile Include="Parking\Car.cs" />
     <Compile Include="Parking\Parking.cs" />
     <Compile Include="Parking\Garage.cs" />
@@ -62,22 +66,18 @@
     <Compile Include="Departments\Faculty.cs" />
     <Compile Include="Persons\Student.cs" />
     <Compile Include="University.cs" />
-    <Compile Include="XmlFiles\XmlProvider.cs" />
+    <Compile Include="Providers\MyXmlProvider.cs" />
+    <Compile Include="Providers\XmlDBProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="XmlFiles\RfFaculty.xml">
+    <Content Include="XmlFiles\University.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="XmlFiles\DepartmentsXml.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="XmlFiles\FacultyXml.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="XmlFiles\StudentsForRF.xml">
+    <Content Include="XmlFiles\UniversityXml.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
