--- a/Dev-3/Dev-3UnitTests/Dev-3UnitTests.csproj
+++ b/Dev-3/Dev-3UnitTests/Dev-3UnitTests.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E92E1B39-D69D-4C4F-96E8-25BCD3D007D5}</ProjectGuid>
+    <ProjectGuid>{70DE9B4E-1F3C-4B06-9926-DEE56DD47A36}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TesterOfStringTranslator</RootNamespace>
-    <AssemblyName>TesterOfStringTranslator</AssemblyName>
+    <RootNamespace>Dev_3UnitTests</RootNamespace>
+    <AssemblyName>Dev-3UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
