--- a/Dev-4/Dev-4/Dev-4.csproj
+++ b/Dev-4/Dev-4/Dev-4.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="MailInboxPage.cs" />
     <Compile Include="MailLoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
