Added more pages and added new exception

--- a/Dev-4/Dev-4/Dev-4.csproj
+++ b/Dev-4/Dev-4/Dev-4.csproj
@@ -50,8 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
-    <Compile Include="MailInboxPage.cs" />
-    <Compile Include="MailLoginPage.cs" />
+    <Compile Include="PageObjects\MainMailPage.cs" />
+    <Compile Include="NoValidPageException.cs" />
+    <Compile Include="PageObjects\PageObject.cs" />
+    <Compile Include="PageObjects\MailInboxPage.cs" />
+    <Compile Include="PageObjects\MailLoginPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
