--- a/Dev-4/Dev-4/Dev-4.csproj
+++ b/Dev-4/Dev-4/Dev-4.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="MailRu.cs" />
     <Compile Include="PageObjects\MainMailPage.cs" />
     <Compile Include="NoValidPageException.cs" />
     <Compile Include="PageObjects\PageObject.cs" />
