--- a/Dev-3/Dev-3/Dev-3.csproj
+++ b/Dev-3/Dev-3/Dev-3.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringTranslator.cs" />
+    <Compile Include="StringTranslitor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
