--- a/Dev-3/Dev-3UnitTests/Dev-3UnitTests.csproj
+++ b/Dev-3/Dev-3UnitTests/Dev-3UnitTests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StringTranslatorTester.cs" />
+    <Compile Include="StringTranslitorTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
