--- a/Dev-5/Dev-5/Dev-5.csproj
+++ b/Dev-5/Dev-5/Dev-5.csproj
@@ -50,23 +50,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WebElements\Button.cs" />
+    <Compile Include="PageObjects\Gmail\GmailLetterPage.cs" />
+    <Compile Include="PageObjects\Gmail\GmailInboxPage.cs" />
+    <Compile Include="PageObjects\Gmail\GmailLoginPage.cs" />
+    <Compile Include="PageObjects\IWebDriverExtension.cs" />
     <Compile Include="EntryPoint.cs" />
-    <Compile Include="MailRu\MailRu.cs" />
-    <Compile Include="MailRu\PageObjects\MailInboxPage.cs" />
-    <Compile Include="MailRu\PageObjects\MailLoginPage.cs" />
-    <Compile Include="MailRu\PageObjects\MailMainPage.cs" />
-    <Compile Include="MailRu\PageObjects\NoValidPageException.cs" />
-    <Compile Include="MailRu\PageObjects\PageObject.cs" />
+    <Compile Include="PageObjects\MailRu\MailInboxPage.cs" />
+    <Compile Include="PageObjects\MailRu\MailLoginPage.cs" />
+    <Compile Include="PageObjects\NoValidPageException.cs" />
+    <Compile Include="PageObjects\PageObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebElements\WebElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Gmail\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
