--- a/CW-5/CW-5/CW-5.csproj
+++ b/CW-5/CW-5/CW-5.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Parking.cs" />
+    <Compile Include="TransportOrganization.cs" />
     <Compile Include="Transports\Scooter.cs" />
     <Compile Include="Transports\Bus.cs" />
     <Compile Include="Transports\Car.cs" />
